deploy: programacioniesbalmis/programaciondam@4edc75dc9fe09d432974beacfa1112a3f8d9f42a

--- a/u13_poo_definir_tipos/ejercicios/1_ejercicios/1_ejercicios_poo_definir_tipos.html
+++ b/u13_poo_definir_tipos/ejercicios/1_ejercicios/1_ejercicios_poo_definir_tipos.html
@@ -501,6 +501,13 @@ Pintada el área de 38,48 cm² de color Verde.
 ¡Dibujo completado con éxito!
 Presiona cualquier tecla para salir...
 </pre>
+<p><strong>Requisitos:</strong></p>
+<ul>
+<li>El circulo tendrá un atributo radio.</li>
+<li>El rotulador tendrá un atributo color de tipo enumerado y solo rotula perímetros.</li>
+<li>Habrá una clase estática Estuche con un solo método también estático que devolverá un array de rotuladores con colores creados de forma aleatoria.</li>
+<li>El pincel también tiene un atributo color y solo pinta áreas.</li>
+</ul>
 </div>
 <div style="page-break-after:always;"></div>
 <div class="box_bg_lightgreen">
