deploy: programacioniesbalmis/programaciondam@1453c34e40f082ccbe2fa1203f0229455e2c972a

--- a/index.html
+++ b/index.html
@@ -168,12 +168,11 @@
                 </a>
             </div>
 
-<!-- INICIO CONTENIDOS OCULTOS 
 
             <div class="col-xxl-6">
                 <a href="./u17_poo_gestion_de_errores/u17_poo_gestion_de_errores.html">
                     <div class="text-start border rounded p-3 shadow btn btn-outline-success w-100">
-                        <div class="h4">Unidad 17 - POO. Gestión de errores.</div>
+                        <div class="h4">Unidad 17 - POO Gestión de errores.</div>
                     </div>
                 </a>
             </div>
@@ -181,7 +180,7 @@
             <div class="col-xxl-6">
                 <a href="./u18_poo_genericos_y_extensores/u18_poo_genericos_y_extensores.html">
                     <div class="text-start border rounded p-3 shadow btn btn-outline-success w-100">
-                        <div class="h4">Unidad 18 - POO. Genéricos. Extensores.</div>
+                        <div class="h4">Unidad 18 - POO Genéricos y Extensores.</div>
                     </div>
                 </a>
             </div>
@@ -189,10 +188,12 @@
             <div class="col-xxl-6">
                 <a href="./u19_poo_colecciones/u19_poo_colecciones.html">
                     <div class="text-start border rounded p-3 shadow btn btn-outline-success w-100">
-                        <div class="h4">Unidad 19 - POO. Colecciones.</div>
+                        <div class="h4">Unidad 19 - POO Colecciones.</div>
                     </div>
                 </a>
             </div>
+
+            <!-- INICIO CONTENIDOS OCULTOS 
 FIN CONTENIDOS OCULTOS -->
 
             <!-- Duplicar este bloque para una nueva entrada en el Menú -->
