deploy: programacioniesbalmis/programaciondam@18ed4ea835ea47aac9d84d0565ad36074f375550

--- a/ejercicios.html
+++ b/ejercicios.html
@@ -413,7 +413,6 @@
                 </div>
             </div>
 
-            <!-- INICIO CONTENIDOS OCULTOS
 
             <div class="col-xxl-6">
                 <div class="text-start border rounded p-3 shadow w-100">
@@ -444,7 +443,7 @@
                     <div class="collapse" id="bloque18">
                         <ul class="list-group list-group-numbered">
                             <li class="h6 list-group-item list-group-item-action">
-                                <a target="_blank" href="./u18_poo_genericos_y_extensores/">
+                                <a target="_blank" href="./u18_poo_genericos_y_extensores/ejercicios/1_ejercicios/1_ejercicios_poo_genericos_y_extensores.html">
                                     POO. Genéricos y extensores.
                                 </a>
                             </li>
@@ -453,6 +452,48 @@
                 </div>
             </div>
 
+            <div class="col-xxl-6">
+                <div class="text-start border rounded p-3 shadow w-100">
+
+                    <div class="collapsed" data-bs-toggle="collapse" href="#bloque18" role="button">
+                        <div class="h4">Unidad 19 - POO. Colecciones.</div>
+                    </div>
+                    <div class="collapse" id="bloque18">
+                        <ul class="list-group list-group-numbered">
+                            <li class="h6 list-group-item list-group-item-action">
+                                <a target="_blank" href="./u19_poo_colecciones/ejercicios/1_ejercicios/1_ejercicios_poo_colecciones.html">
+                                    POO. Colecciones.
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+<!-- INICIO CONTENIDOS OCULTOS
+            <div class="col-xxl-6">
+                <div class="text-start border rounded p-3 shadow w-100">
+
+                    <div class="collapsed" data-bs-toggle="collapse" href="#bloque18" role="button">
+                        <div class="h4">Unidad 20 - Programación Funcional.</div>
+                    </div>
+                    <div class="collapse" id="bloque18">
+                        <ul class="list-group list-group-numbered">
+                            <li class="h6 list-group-item list-group-item-action">
+                                <a target="_blank" href="./u20_programacion_funcional/ejercicios/1_ejercicios/1_ejercicios_programacion_funcional.html">
+                                    Programación Funcional - Delegados.
+                                </a>
+                                <a target="_blank" href="./u20_programacion_funcional/ejercicios/2_ejercicios/2_ejercicios_programacion_funcional.html">
+                                    Programación Funcional - Funciones Lambda.
+                                </a>
+                                <a target="_blank" href="./u20_programacion_funcional/ejercicios/3_ejercicios/3_ejercicios_programacion_funcional.html">
+                                    Programación Funcional - Consultas funcionales.
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>             
 FIN CONTENIDOS OCULTOS -->
         </div>
     </main>
