--- a/index.html
+++ b/index.html
@@ -193,7 +193,15 @@
                 </a>
             </div>
 
-            <!-- INICIO CONTENIDOS OCULTOS 
+
+<!-- INICIO CONTENIDOS OCULTOS 
+            <div class="col-xxl-6">
+                <a href="./u20_programacion_funcional/u20_programacion_funcional.html">
+                    <div class="text-start border rounded p-3 shadow btn btn-outline-success w-100">
+                        <div class="h4">Unidad 20 - Programación Funcional.</div>
+                    </div>
+                </a>
+            </div>
 FIN CONTENIDOS OCULTOS -->
 
             <!-- Duplicar este bloque para una nueva entrada en el Menú -->
