deploy: programacioniesbalmis/programaciondam@3c67c767cce73ae2bfc3b2a2c6d78923dbea0e2e

--- a/u15_poo_roles_herencia/ejercicios/1_ejercicios/1_ejercicios_poo_roles_herencia.html
+++ b/u15_poo_roles_herencia/ejercicios/1_ejercicios/1_ejercicios_poo_roles_herencia.html
@@ -260,7 +260,8 @@ Creando herramientas ....
 
 Martillo, Marca: Stanley, Peso: 0.5, Precio: 25
 
-Taladro Percutor, Marca: Bosch, Peso: 2.3, Precio: 89.25, Potencia: 750, Velocidad Máxima: 3000
+// para un precio sin rebajar de 105.00
+Taladro Percutor, Marca: Bosch, Peso: 2.3, Precio: 89.25, Potencia: 750, Velocidad Máxima: 3000 
 
 Presiona cualquier tecla para salir...
 </pre>
@@ -269,7 +270,7 @@ Presiona cualquier tecla para salir...
 <li>
 <p><strong>Clase Herramienta</strong>:</p>
 <ul>
-<li>Propiedad virtual <code>Precio</code> (double) que por defecto devuelve <code>precioBase</code></li>
+<li>Propiedad virtual <code>Precio</code> (double) que por defecto devuelve el atributo privado <code>precioBase</code></li>
 <li>Método <code>ACadena()</code> que devuelve una representación de la herramienta</li>
 </ul>
 </li>
