deploy: programacioniesbalmis/programaciondam@13868bca65d47734dfb694f26cc25ad504de4532

--- a/u15_poo_roles_herencia/ejercicios/1_ejercicios/1_ejercicios_poo_roles_herencia.html
+++ b/u15_poo_roles_herencia/ejercicios/1_ejercicios/1_ejercicios_poo_roles_herencia.html
@@ -478,7 +478,7 @@ Creando inventario...
 Martillo, Marca: Stanley, Peso: 0,5, Precio: 25
 Taladro Percutor, Marca: Bosch, Peso: 2,3, Precio: 89,25, Potencia: 750, Velocidad Máxima: 3000
 Sierra Circular, Marca: Makita, Peso: 4,1, Precio: 132, Potencia: 1400, Hoja: 185mm
-Lijadora Orbital, Marca: Dewalt, Peso: 1,8, Precio: 54, RPM: 12000, Disco: 125mm
+Lijadora Orbital, Marca: Dewalt, Peso: 1,8, Precio: 54, RPM: 9000, Disco: 125mm
 
 Mostrando usos...
 Martillo: Depende de la herramienta.
@@ -613,7 +613,7 @@ Se parte de una clase base <code>Albergue</code> y tres subclases: <code>Albergu
 <ol>
 <li><code>AlbergueRural</code>:
 <ul>
-<li>Precio: si temporada alta en alguna reserva (existe alguna <code>EsTemporadaAlta</code>) y ocupación &gt; 20% =&gt; <code>Precio * 2.15</code> si no <code>Precio * 1.15</code> ya aplicado por incluir desayuno y cena.</li>
+<li>Precio: si temporada alta en alguna reserva (existe alguna <code>EsTemporadaAlta</code>) y ocupación &gt;= 20% =&gt; <code>Precio * 2.15</code> si no <code>Precio * 1.15</code> ya aplicado por incluir desayuno y cena.</li>
 <li>AdmiteReserva: además de la base, rechaza peticiones &gt; 50% de la capacidad total en una sola reserva.</li>
 <li>InformacionComplementaria devuelve un texto de clima simulado.</li>
 </ul>
@@ -626,7 +626,7 @@ Se parte de una clase base <code>Albergue</code> y tres subclases: <code>Albergu
 </li>
 <li><code>AlbergueCostero</code>:
 <ul>
-<li>Precio: si es temporada alta en la última reserva registrada =&gt; <code>Precio + 3</code> y si ocupación &gt; 40% añade +2 extra.</li>
+<li>Precio: si es temporada alta en la última reserva registrada =&gt; <code>Precio + 3</code> y si ocupación &gt;= 40% añade +2 extra.</li>
 <li>AdmiteReserva: rechaza si temporada ALTA y plazas solicitadas &gt; 60% de la capacidad restante.</li>
 <li>InformacionComplementaria devuelve un texto sobre el oleaje.</li>
 </ul>
