deploy: programacioniesbalmis/programaciondam@87e6b3f1fb707e41aeaf7395058a262e8c5598fa

--- a/ejercicios.html
+++ b/ejercicios.html
@@ -482,9 +482,13 @@
                                 <a target="_blank" href="./u20_programacion_funcional/ejercicios/1_ejercicios/1_ejercicios_programacion_funcional.html">
                                     Programación Funcional - Delegados.
                                 </a>
+                            </li>
+                            <li class="h6 list-group-item list-group-item-action">
                                 <a target="_blank" href="./u20_programacion_funcional/ejercicios/2_ejercicios/2_ejercicios_programacion_funcional.html">
                                     Programación Funcional - Funciones Lambda.
                                 </a>
+                            </li>
+                            <li class="h6 list-group-item list-group-item-action">
                                 <a target="_blank" href="./u20_programacion_funcional/ejercicios/3_ejercicios/3_ejercicios_programacion_funcional.html">
                                     Programación Funcional - Consultas funcionales.
                                 </a>
